# Link_SSRF

./: .gitignore  Dockerfile  README.md  compose.yml  start.sh
EXEC/: exec.sh
EXEC/exec/: README.md  pyproject.toml
EXEC/exec/src/exec/: __init__.py
db/: Dockerfile
db/init/: init.sql  insert_users.sql
frontApp/: Dockerfile
frontApp/vul-app-front/: index.html  package-lock.json  package.json  vite.config.ts
frontApp/vul-app-front/src/: App.tsx
frontApp/vul-app-front/src/lib/: fetchUsersAPI.ts  registerUser.ts
frontApp/vul-app-front/src/lib/types/: user.ts
lb/: Dockerfile
lb/config/: nginx.conf
src/: go.mod  main.go
vulApp/src/: go.mod  go.sum  main.go
vulApp/src/public/: admin.html  index.html
vulApp/src/repository/: init.go
