[project]
name = "exec"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kaikei-e", email = "e_kaikei@protonmail.com" }
]
dependencies = [
    "pycurl>=7.45.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "exec:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/exec"]
